input focus and unshift timeslot fixed

--- a/search/styles.css
+++ b/search/styles.css
@@ -111,4 +111,5 @@ button .fa-solid {
   padding: 9px;
   border: 1px solid rgb(0, 0, 0);
   color: rgb(18, 54, 117);
+  list-style: none;
 }
